# expert-potato

./: .gitignore  CMakeLists.txt
D1/src/: var1  var1.cpp  var2  var2.cpp  var3  var3.cpp  var4  var4.cpp  var5  var5.cpp
D2/src/: ch2  ch2.cpp
D3/CH3 v1/: CH3Var1_T142  CH3Var1_T142.cpp
D3/CH3 v3/: CH3Var3_T142  CH3Var3_T142.cpp  main  main.cpp
D3/CH3 v4/: CH3Var4_T142.cpp  CH4Var4_T142
D3/src/: CH3Var3_T142.cpp
D4/: file.txt
D4/src/: Var3.cpp
Project/src/: CProject_T142.cpp
